--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,15 @@ crossbeam-epoch = "0.9.18"
 indexmap = "2.12.1"
 parking_lot = "0.12.5"
 
-[dev-dependencies]
 criterion = "0.8.1"
 rand = "0.9.2"
 rayon = "1.11.0"
+divan = "0.1.21"
 
 [lints.rust]
 # Safety and correctness
 unsafe_op_in_unsafe_fn = "warn"
-missing_docs = "deny"  # Enforce documentation for public API
+missing_docs = "deny"                                       # Enforce documentation for public API
 missing_debug_implementations = "warn"
 rust_2024_compatibility = { level = "warn", priority = -1 }
 
@@ -92,7 +92,10 @@ inherits = "release"
 debug = true
 strip = "none"
 
-# Uncomment when benchmarks are implemented
-# [[bench]]
-# name = "benchmarks"
-# harness = false
+[[bench]]
+name = "read_ikey"
+harness = false
+
+[[bench]]
+name = "read_ikey_divan"
+harness = false
