--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ include = ["src/**/*", "Cargo.toml", "LICENSE-*", "README.md"]
 crossbeam-epoch = "0.9.18"
 indexmap = "2.12.1"
 parking_lot = "0.12.5"
-
-criterion = "0.8.1"
 rand = "0.9.2"
 rayon = "1.11.0"
+
+[dev-dependencies]
 divan = "0.1.21"
 
 [lints.rust]
@@ -84,8 +84,9 @@ strip = "symbols"
 
 [profile.release-with-debug]
 inherits = "release"
-debug = true
+debug = 2
 strip = "none"
+lto = false
 
 [profile.bench]
 inherits = "release"
@@ -93,9 +94,9 @@ debug = true
 strip = "none"
 
 [[bench]]
-name = "read_ikey"
+name = "key"
 harness = false
 
 [[bench]]
-name = "read_ikey_divan"
+name = "permuter"
 harness = false
