Fixing names, adding license and an actual README + Baseline benchmarks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "masstree"
+name = "madtree"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.92.0"
 authors = ["consistent-milk12"]
 description = "Masstree: A high-performance concurrent trie of B+trees for key-value storage"
-license = "MIT OR Apache-2.0"
-repository = ""
+license = "MIT"
+repository = "https://github.com/consistent-milk12/madtree"
 keywords = ["data-structures", "concurrent", "trie", "btree", "key-value"]
 categories = ["data-structures", "concurrency", "database-implementations"]
 readme = "README.md"
-include = ["src/**/*", "Cargo.toml", "LICENSE-*", "README.md"]
+include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
 
 [dependencies]
 crossbeam-epoch = "0.9.18"
