Fixed the naming confusion + Improved README, LICENSE and Baseline performance

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "madtree"
+name = "masstree"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.92.0"
 authors = ["consistent-milk12"]
 description = "Masstree: A high-performance concurrent trie of B+trees for key-value storage"
 license = "MIT"
-repository = "https://github.com/consistent-milk12/madtree"
+repository = "https://github.com/consistent-milk12/masstree"
 keywords = ["data-structures", "concurrent", "trie", "btree", "key-value"]
 categories = ["data-structures", "concurrency", "database-implementations"]
 readme = "README.md"
