--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/consistent-milk12/masstree"
 keywords = ["data-structures", "concurrent", "trie", "btree", "key-value"]
 categories = ["data-structures", "concurrency", "database-implementations"]
 readme = "README.md"
-include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
+include = ["src/**/*", "benches/**/*", "tests/**/*", "examples/**/*", "Cargo.toml", "LICENSE", "README.md"]
 
 [dependencies]
 crossbeam-epoch = "0.9.18"
