Atomic Node Version
New internal history tracking system: Px.Sx.Ax

P3.S1.A1: Atomic Stable
-----------------------
- Update `stable()` to spin while dirty bits set
- Add `Ordering::Acquire` fence after load
- Implement spin_loop hint via `Backoff` struct

Ref: `nodeversion.hh:36-48`

P3.S1.A2: Atomic Lock
---------------------
- Update `lock()` to use `compare_exchange_weak` CAS loop
- Spin on lock bit AND dirty bits
- Return locked version value via `LockGuard`

Backoff Strategy:
-----------------
- Implement exponential backoff in CAS loop (0→1→3→7→15 capped)
- Use `std::hint::spin_loop()` (maps to x86 PAUSE instruction)
- Add `try_lock_for(Duration) -> Option<LockGuard>` with timeout
- Document liveness: `lock()` may spin indefinitely under contention

Ref: `nodeversion.hh:87-109`

P3.S1.A3: Atomic Unlock
-----------------------
- `Drop` impl uses `Ordering::Release` store (already correct from Phase
1)
- Version increment logic correct (matches C++ exactly) 3.1.4 Version
Guard

P3.S1.A4: Version Guard
-----------------------
- `LockGuard<'a>` RAII wrapper (existed from Phase 1)
- Holds reference to node and locked version
- `Drop` impl auto-unlocks with correct version increment
- `!Send`/`!Sync` via `PhantomData<*mut ()>`

P3.S1.A5: Concurrency Tests
---------------------------
- Test lock/unlock from multiple threads (`test_concurrent_lock_unlock`)
- Test stable spins on dirty bit (`test_stable_spins_on_dirty`)
- Test version guard unlocks on drop (`test_guard_unlocks_on_drop`)
- Test version guard unlocks on panic (`test_guard_unlocks_on_panic`)
- Test `try_lock_for` timeout (`test_try_lock_for_timeout`)
- Test version increment under contention
(`test_version_increment_under_contention`)

P3.S1.A6: Loom Tests (Deterministic Concurrency Verification)
-------------------------------------------------------------
- `test_loom_mutual_exclusion` - Two threads can't hold lock
simultaneously
- `test_loom_try_lock_fails_when_held` - try_lock fails when lock is
held

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,12 @@ include = [
 [dev-dependencies]
 divan = "0.1.21"
 proptest = "1.9.0"
+loom = "0.7.2"
 
 [lints.rust]
+# Allow loom cfg for deterministic concurrency testing
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
+
 # Safety and correctness
 unsafe_op_in_unsafe_fn = "warn"
 missing_docs = "deny"                                       # Enforce documentation for public API
