Major divergence from epoch based to Hyaline reclamation
After studying the reference and both `crossbeam-epoch` and `seize`
crates, I decided to make a major divergence by choosing to use `seize',
as the Masstree as data structure is inherently designed for read heavy
scenarios. The divergence and rationale is discussed in README.md in
more details. This still doesn't make any changes to the core algorithms
of C++ original, apart from various memory safety constraits introduced
by Rust itself.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ include = [
 [dependencies]
 # No dependencies for Phase 1 (single-threaded)
 # Future phases will add:
-# - crossbeam-epoch: Epoch-based memory reclamation (Phase 3)
+# - seize: Hyaline-based memory reclamation (Phase 3) - predictable latency, robust
 # - parking_lot: High-performance mutexes if needed (Phase 3)
 
 [dev-dependencies]
