Improved benchmarks and the standard global allocator bottleneck
Key Finding: The algorithm for masstree uses allocation patterns that
outperform similar data structures in becnhmarks consistently when
mimalloc is used as the global allocator.

The standard global allocator works best when using SkipList (and will
probably be the best similar concurrent data structure to use if limited
to only the standard global allocator, but various it's not uncommon to
use custom global allocator like jemmaloc and mimalloc, as they were
developed by meta and microsoft respectively for production use).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,19 @@ include = [
 	"README.md",
 ]
 
+[features]
+default = []
+# Alternative global allocators for benchmarking
+mimalloc = ["dep:mimalloc"]
+jemalloc = ["dep:tikv-jemallocator"]
+
 [dependencies]
 seize = "0.5.1"
 parking_lot = "0.12.5"
+
+# Optional allocators (enabled via features)
+mimalloc = { version = "0.1.48", optional = true }
+tikv-jemallocator = { version = "0.6.1", optional = true }
 
 [dev-dependencies]
 divan = "0.1.21"
