--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ default = []
 # Alternative global allocators for benchmarking
 mimalloc = ["dep:mimalloc"]
 jemalloc = ["dep:tikv-jemallocator"]
+# Enable tracing instrumentation for debugging race conditions.
+# When disabled (default), all tracing calls compile to no-ops with zero overhead.
+tracing = ["dep:tracing"]
 
 [dependencies]
 seize = "0.5.1"
@@ -40,6 +43,9 @@ parking_lot = "0.12.5"
 # Optional allocators (enabled via features)
 mimalloc = { version = "0.1.48", optional = true }
 tikv-jemallocator = { version = "0.6.1", optional = true }
+
+# Optional tracing (enabled via features) - zero overhead when disabled
+tracing = { version = "0.1.44", optional = true }
 
 [dev-dependencies]
 divan = "0.1.21"
@@ -50,6 +56,18 @@ dashmap = "6.1.0"
 crossbeam-skiplist = "0.1.3"
 concurrent-map = "5.0.37"
 indexset = { version = "0.12.3", features = ["concurrent"] }
+tracing = { version = "0.1.44", features = ["attributes"] }
+tracing-subscriber = { version = "0.3.22", features = [
+	"env-filter",
+	"fmt",
+	"json",
+	"parking_lot",
+] }
+# Simple #[traced_test] macro for asserting on log output in unit tests
+# Note: integration tests need "no-env-filter" feature
+tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
+# For formatting JSON logs
+serde_json = "1.0"
 
 [lints.rust]
 # Allow loom and shuttle cfg for deterministic concurrency testing
