--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ loom = "0.7.2"
 shuttle = "0.8.1"
 dashmap = "6.1.0"
 crossbeam-skiplist = "0.1.3"
+crossbeam-epoch = "0.9"
 concurrent-map = "5.0.37"
 indexset = { version = "0.12.3", features = ["concurrent"] }
 tracing = { version = "0.1.44", features = ["attributes"] }
