Random access benches, last lock_contention debug and performance optimization sprint before next phase
- The read/write is mostly stable and performant. The lock contention
issues for higher threads has been unusually hard to track down. Which
is why I am trying out some direct approaches to address them.

- In any case, I can come back to this later. The range scan feature is
the more important thing for this data structure.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -165,3 +165,16 @@ strip = "none"
 [[bench]]
 name = "concurrent_maps24"
 harness = false
+
+
+[[bench]]
+name = "core_benches"
+harness = false
+
+# =============================================================================
+# Profiling Binaries
+# =============================================================================
+
+[[bin]]
+name = "lock_contention"
+path = "bin/lock_contention.rs"
