--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,13 @@ tracing-subscriber = { version = "0.3.22", features = [
 ], optional = true }
 tracing-appender = { version = "0.2.3", optional = true }
 
+# For formatting JSON logs
+serde_json = "1.0.147"
+serde = { version = "1.0", features = ["derive"] }
+rayon = "1.10"
+chrono = "0.4"
+
+
 [dev-dependencies]
 divan = "0.1.21"
 proptest = "1.9.0"
@@ -73,8 +80,6 @@ tracing-subscriber = { version = "0.3.22", features = [
 # Simple #[traced_test] macro for asserting on log output in unit tests
 # Note: integration tests need "no-env-filter" feature
 tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
-# For formatting JSON logs
-serde_json = "1.0.147"
 
 [lints.rust]
 # Allow loom and shuttle cfg for deterministic concurrency testing
