--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,13 +51,13 @@ tracing-subscriber = { version = "0.3.22", features = [
 	"fmt",
 	"json",
 ], optional = true }
-tracing-appender = { version = "0.2.3", optional = true }
+tracing-appender = { version = "0.2.4", optional = true }
 
 # For formatting JSON logs
 serde_json = "1.0.147"
-serde = { version = "1.0", features = ["derive"] }
-rayon = "1.10"
-chrono = "0.4"
+serde = { version = "1.0.228", features = ["derive"] }
+rayon = "1.11.0"
+chrono = "0.4.42"
 
 
 [dev-dependencies]
@@ -65,11 +65,14 @@ divan = "0.1.21"
 proptest = "1.9.0"
 loom = "0.7.2"
 shuttle = "0.8.1"
+papaya = "0.2.3"
 dashmap = "6.1.0"
 congee = "0.4.1"
 crossbeam-skiplist = "0.1.3"
 crossbeam-epoch = "0.9.18"
 indexset = { version = "0.12.3", features = ["concurrent"] }
+scc = "3.4.8"
+sdd = "4.5.3"
 tracing = { version = "0.1.44", features = ["attributes"] }
 tracing-subscriber = { version = "0.3.22", features = [
 	"env-filter",
@@ -174,6 +177,10 @@ harness = false
 
 [[bench]]
 name = "core_benches"
+harness = false
+
+[[bench]]
+name = "sota"
 harness = false
 
 # =============================================================================
