--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ tracing-appender = { version = "0.2.4", optional = true }
 # For formatting JSON logs
 serde_json = "1.0.147"
 serde = { version = "1.0.228", features = ["derive"] }
-rayon = "1.11.0"
+rayon = { version = "1.11.0", optional = true }
 chrono = "0.4.42"
 
 
